* Colors of default scheme changed to follow the soft-tone of the Claro theme
* Manual tax lines with 0 (zero) tax and taxable amounts are no longer posted
* Employee 'Wages & Deductions' (experimental) page now hidden until enabled
* Templates for printed documents need to escape inserted data (was automatic)
* Search checkmarks 'Open/Closed' replaced by radio button 'Open/Closed/All'

Bugs fixed
* Default dates sometimes off by a day (before or after the current day) (#2587)
* Customers and vendors in parts screen selectable through drop-downs
* Overpayments not shown in Cash > Reports > Receipts (#3577)

Code cleanup
* Reduce use of LedgerSMB::App_State and LedgerSMB::App_State::Locale
* Replace unnecessary UNION selects on ar/ap/gl by select on transactions
* Remove legacy infrastructure to generate table-formatted report output
* Remove unmaintained ability from Makefile to install dependencies
* Moved authentication for 'setup.pl', making it stand-alone
* Removed use of LSMB_ALWAYS_MONEY environment variable
* Replaced 'no strict "refs"' with use of Symbol module
* Removed tables 'fixes' and 'menu_attribute'
* Removed template functions escape(), tt_url() & UNESCAPE()
* Javascript improvements based on automated code review from lgtm.com
* Disentangled processing of UI and printed documents
* Remove remnants of custom field support
* Remove unused infrastructure to administer access role groups

Dependency updates
* Dojo Toolkit updated to 1.16.0
* TeX::Encode >= 2.007
* Authen::SASL (new)
* Email::Sender (new)
* Email::Stuffer (new)
* MIME::Lite (dropped)


Changelog for 1.7 Series
2019-10-04

Changelog for 1.7.9
* Fix authentication issue due to inconsistent cookie handling


Changelog for 1.7.8
* Upgrade Dojo dependency to 1.15.1
* Load the template from the database when printing receipts
* Prevent dead-locks in response to request from timed out session
* Add monetary formatting to payments/receipts screen and report


Changelog for 1.7.7