@@ -1,0 +1,4 @@
+ALTER TABLE exchangerate_default
+ALTER COLUMN rate
+SET NOT NULL;
+
